fixed visual styling bug if the text overflows out of the parent container in the quote container.

--- a/react-app/src/components/Quote/Quote.css
+++ b/react-app/src/components/Quote/Quote.css
@@ -4,7 +4,7 @@
     margin: auto;
     margin-top: 2%;
     text-align: center;
-    padding: 20px 5px;
+    padding: 20px 1px;
     border-radius: 6px;
     background-color: whitesmoke;
     border: 1px solid rgb(192, 191, 191);
@@ -44,10 +44,13 @@
 
 .quote-body_content-content {
     padding: 5px;
-    margin: 10px 0px;
+    margin-bottom: 5px;
     text-align: left;
     font-family: sans-serif;
-    /* border: 1px solid black; */
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
 }
 
 .quote-body_content-content:hover {
@@ -59,29 +62,26 @@
 }
 
 .quote-body_content-content_quote {
-    display: inline-block;
-    margin: 8px 0px;
+    margin-top: 8px;
     padding: 0px 0px 0px 10px;
+    grid-column: 1 / 2;
+    grid-row: 1/2;
+    word-break: break-all;
 }
 
 .quote-body_content-content_option {
     cursor: pointer;
-    float: right;
-    position: relative;
+    grid-column: 2/3;
+    grid-row: 1/3;
 }
 
 .quote-body_content-content_author {
-    display: block;
     font-weight: 600;
     margin: 8px 0px;
     padding: 0px 0px 0px 10px;
-}
-
-.quote-body_content-settings {
-    position: absolute;
-    /* top: 0px; */
-    right: 20px;
-    padding: 4px 10px;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    word-break: break-all;
 }
 
 .modal {
@@ -144,5 +144,4 @@
     .modal {
         width: 95%;
     }
-
 }
